--- a/FoodWebsite/fooddelivery.html
+++ b/FoodWebsite/fooddelivery.html
@@ -199,6 +199,27 @@
             </div>
 
         </section>
+
+     
+        <div class="upload-file">
+           <center>
+            <p style=" font-size:18px;
+  margin-bottom:20px;
+  color:#333;
+">upload a food review file</p>
+            <form method="post" action="file_upload/u.php" enctype="multipart/form-data">
+Select File:<input type="file" name="fn"><br><br>
+<input type="submit" name="upload" value="upload" style="padding:10px 20px;
+  background:#e63946;
+  color:white;
+  border:none;
+  border-radius:20px;
+  cursor:pointer;">
+</form>
+</center>
+
+</div>  
+</body>
         <footer class="footer">
             <p>&copy; 2025 FoodFast. All rights reserved.</p>
         </footer>
